--- a/calculator/html/cal.html
+++ b/calculator/html/cal.html
@@ -150,7 +150,7 @@
       <div class="oper">
         <h1>=</h1>
       </div> -->
-<script src="calculator.js"></script>
+<script src="../js/calculator.js"></script>
 
     </div>
 </body>
