--- a/calci/index.html
+++ b/calci/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-<link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="container">
-        <form name="myform">
-            <input type="text" id="res" autofocus placeholder="0"  name="textview">
-        </form>
+      <form name="myform">
+        <input type="text" id="res" autofocus placeholder="0" name="textview" />
+      </form>
     </div>
     <script src="calci.js"></script>
-
-</body>
+    <div class="btnS"></div>
+  </body>
 </html>
