--- a/calci/index.html
+++ b/calci/index.html
@@ -9,7 +9,14 @@
   <body>
     <div class="container">
       <form name="myform">
-        <input type="text" id="res" autofocus placeholder="0" name="textview" />
+        <input
+          type="text"
+          id="res"
+          autofocus
+          placeholder="0"
+          onkeypress="myFunction(event)"
+          name="textview"
+        />
       </form>
     </div>
     <script src="calci.js"></script>
